hphp/hack/test/package_v2/package_access/illegal_cross_package_with_requirepackage_attr2.php
//// a.php
<?hh
// package pkg1
<<file:__EnableUnstableFeatures('require_package')>>

class A {
  <<__RequirePackage("pkg2")>>
  public function test() : void {
  }
}
function test(): void {
  $x = new A();
  $x->test(); // error
}
